# curvine

./: .gitignore  .gitvote.yml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Curvine缓存系统使用指南.md  FINAL_OPTIMIZATION_ANALYSIS.md  HEAP_TRACE_DESIGN.md  LICENSE  Makefile  PHASE1-CHANGES.md  README.md  README_zh.md  curvine 缓存使用指南.md  curvine-fuse-metrics-design.md  inode-view-id-only-design.md  note_for_optimization.txt  repair-plan.json  run_ufs_oss_hdfs_test.sh.new  runbook_rdma.md  runbook_tcp.md  rust-toolchain.toml  test_get_fix.py  test_range_requests.sh  testing-heap-trace.toml
crates/adapters/curvine-storage-spdk/: Cargo.toml
crates/common/curvine-config/: Cargo.toml
crates/common/curvine-error/: Cargo.toml
crates/common/curvine-fs-api/: Cargo.toml
crates/common/curvine-model/: Cargo.toml
curvine-common/macros/: Cargo.toml
curvine-common/macros/src/: client_cli.rs  client_conf.rs  client_conf_cli_test.rs  lib.rs
curvine-common/macros/tests/: derive_client_cli.rs
curvine-config-macros/: Cargo.toml
curvine-config-macros/src/: lib.rs
curvine-gateway/: Cargo.toml  README.md
curvine-gateway/src/: lib.rs
curvine-gateway/src/auth/: mod.rs
curvine-gateway/src/example/: test_s3_complete.sh  test_streaming.sh
curvine-gateway/src/http/: axum.rs
curvine-gateway/src/s3/: handlers.rs  s3_api.rs  types.rs
curvine-gateway/src/test/: test_performance_baseline.sh  test_range_limits.sh  test_range_streaming.sh
curvine-gateway/src/utils/: mod.rs
curvine-kube/: Cargo.toml
curvine-kube/src/: client.rs  config.rs  constants.rs  descriptor.rs  dynamic_config.rs  error.rs  lib.rs  pod_template.rs  pod_template_utils.rs  validator.rs
curvine-kube/src/builder/: configmap.rs  headless_service.rs  master.rs  mod.rs  pod_merger.rs  service.rs  traits.rs  worker.rs
curvine-kube/tests/: integration_test.rs  new_features_test.rs  quick_e2e_test.sh
curvine-kube/tests/conf/: curvine-cluster-k8s-example.toml
curvine-lancedb-rs/: Cargo.toml  README.md  pyproject.toml
curvine-lancedb-rs/python/tests/: test_basic.py
curvine-lancedb-rs/src/: connection.rs  error.rs  lib.rs  object_store.rs
curvine-lancedb-rs/src/python/: arrow_bridge.rs  py_connect.rs  py_connection.rs  py_query.rs  py_table.rs
curvine-lancedb-rs/tests/: facade_compat.rs  lancedb_smoke.rs  object_store_semantics.rs
curvine-tests/: Cargo.toml  Dockerfile  README.md
curvine-tests/benchmark/: README.md
curvine-tests/benchmark/master-stress/: deployment-metadata-stable.yaml  deployment-metadata-stress.yaml  deployment.yaml
curvine-tests/examples/: test_cluster.rs
curvine-tests/regression/: build-server.py  daily_regression_test.sh  nextest.toml  nextest_junit_to_summary.py
curvine-tests/regression/templates/: no_results.html  result.html  unit_test_details.html
curvine-tests/regression/tests/: coverage_test.py  fuse_test.py  ltp_test.py  test_concurrent_io.py  unittest_test.py
curvine-tests/regression/utils/: test_utils.py
curvine-tests/src/: bench_action.rs  curvine_bench.rs  testing.rs
curvine-tests/src/rpc_stress/: stress_args.rs  stress_env.rs
curvine-tests/tests/: block_test.rs  cluster_test.rs  fallback_read_test.rs  fs_test.rs  fuse_test.rs  journal_replay_regression_test.rs  lancedb_object_store_e2e.rs  load_client_test.rs  master_failover_test.rs  mount_failover_test.rs  mount_manager_test.rs  mount_table_test.rs  mount_test.rs  mount_ttl_compat_test.rs  p2p_read_acceleration_test.rs  quota_eviction_test.rs  replication_test.rs  timeout_test.rs  ttl_test.rs  ufs_test.rs  unified_test.rs  write_cache_test.rs
curvine-tests/tests/common/: mod.rs
curvine-vector-gateway/: Cargo.toml
curvine-vector-gateway/src/: auth.rs  auth_store.rs  lib.rs  main.rs  sig_v4.rs
curvine-vector-gateway/src/http/: mod.rs
curvine-vector-gateway/tests/: auth_middleware.rs  auth_store.rs  http_routes.rs  sig_v4.rs
curvine-vector-gateway/tests/sig_v4/: extract_scope.rs  harness.rs  query_sort.rs  signing_service.rs  x_amz_date.rs
orpc/: Cargo.toml  build.rs
orpc/csrc/: spdk_opts_helper.c
orpc/examples/: file_client.rs  file_server.rs  ucp_server.rs  ucx_server_example.rs
orpc/src/: lib.rs
orpc/src/client/: buffer_client.rs  client_conf.rs  client_factory.rs  cluster_connector.rs  rpc_client.rs
orpc/src/common/: duration_unit.rs  fast_hash_map.rs  fast_hash_set.rs  file_utils.rs  logger.rs  metrics.rs  mod.rs  utils.rs
orpc/src/handler/: frame.rs  frame_buf.rs  handler_service.rs  message_handler.rs  mod.rs  read_frame.rs  rpc_frame.rs  stream_handler.rs  write_frame.rs
orpc/src/io/: block_io.rs  local_file.rs  mod.rs  spdk_bdev.rs  spdk_bdev_test.rs  spdk_conf.rs  spdk_env.rs  spdk_ffi.rs  spdk_poller.rs  spdk_stub.rs
orpc/src/message/: message_builder.rs  rpc_message.rs
orpc/src/runtime/: async_runtime.rs  group_executor.rs  single_executor.rs
orpc/src/server/: rpc_server.rs  server_conf.rs  server_monitor.rs
orpc/src/sync/: async_map.rs  channel.rs  error_monitor.rs  lock.rs  mod.rs  mutex.rs  state_monitor.rs
orpc/src/sys/: data_slice.rs  raw_io_slice.rs  raw_vec.rs  sys_libc.rs
orpc/src/test/: simple_server.rs
orpc/src/ucp/: bindings.rs  config.rs  conn_request.rs  context.rs  endpoint.rs  listener.rs  mod.rs  request.rs  rma.rs  sock_addr.rs  ucp_conf.rs  ucp_context.rs  ucp_endpoint.rs  ucp_error.rs  ucp_executor.rs  ucp_frame.rs  ucp_listener.rs  ucp_runtime.rs  ucp_server.rs  ucp_utils.rs  ucp_worker.rs  ucs_sock_addr.rs  worker.rs  (+3 more)
orpc/tests/: executor_test.rs  file_test.rs  heap_trace_http_test.rs  heap_trace_metrics_test.rs  heap_trace_normalize_test.rs  libc_test.rs  logger_test.rs  pipe_test.rs  stream_handler_test.rs  ucp_address_fix_validation.rs  ucp_address_test.rs  ucp_connection_test.rs  ucp_data_transfer_test.rs  ucp_debug_test.rs  ucp_interactive_test.rs  ucp_minimal_debug.rs  ucp_pointer_fix_test.rs  ucp_raw_socket_test.rs  ucp_safe_test.rs  ucp_simple_test.rs  ucp_test.rs  ucp_test_debug.rs
rust-ucx-example/: Cargo.toml
rust-ucx-example/examples/: benchmark.rs  ping_pong.rs
rust-ucx-example/src/: client.rs  server.rs
(+879 files in other folders)
