[package]
name = "curvine-config-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macros for Curvine client configuration and CLI overrides"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
