[package]
name = "orpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance network communication framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
heap-trace = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:inferno",
    "dep:base64",
]

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
bytes ={ workspace = true }
libc = { workspace = true }
rand = { workspace = true }
murmur3 = { workspace = true }
once_cell = { workspace = true }
crc32fast = { workspace = true }
socket2 = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }
prometheus = { workspace = true, features = ["process"] }
sysinfo = { workspace = true }
fs2 = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
mini-moka = { workspace = true }
bincode = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
tracing-log = { workspace = true }
fxhash = { workspace = true }
moka = { workspace = true }
md-5 = { workspace = true }
async-trait = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["profiling"] }
inferno = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
