[package]
name = "rust-ucx-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Logging
env_logger = "0.10"
log = "0.4"
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# Error handling
anyhow = "1.0"
# Command line parsing
clap = { version = "4.0", features = ["derive"] }
# FFI bindings for UCX
libc = "0.2"
# Memory management
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "ucx_server"
path = "src/server.rs"

[[bin]]
name = "ucx_client"  
path = "src/client.rs"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
