[package]
name = "curvine-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
curvine-error = { workspace = true }
curvine-fs-api = { workspace = true }
curvine-model = { workspace = true }
curvine-common-macros = { workspace = true }
orpc = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

[features]
default = []
